# monka-m1-pro-battery-indicator

./: .gitignore  CMakeLists.txt  Config.ini  Monka M1 Pro Battery Indicator.cpp  Monka M1 Pro Battery Indicator.rc  Monka M1 Pro Battery Indicator.sln  Monka M1 Pro Battery Indicator.vcxproj  Monka M1 Pro Battery Indicator.vcxproj.filters  Monka_M1_Pro_Battery_Indicator.rc  README.md  battery_icon_renderer.cpp  battery_icon_renderer.h  build.bat  color_picker_dialog.cpp  color_picker_dialog.h  colors.cpp  colors.h  device_discovery.cpp  device_discovery.h  device_settings_dialog.h  font_loader.cpp  font_loader.h  framework.h  mouse_item.cpp  mouse_item.h  mouse_list.cpp  mouse_list.h  resource.h  resource.rc  resource_loader.cpp  resource_loader.h  settings_mouse_renderer.cpp  settings_mouse_renderer.h  settings_view.cpp  settings_view.h  svg_renderer.cpp  svg_renderer.h  tray_icon_renderer.cpp  tray_icon_renderer.h  ui_renderer.cpp  (+1 more)
docs/: index.html  index.txt  manifest.json
docs/_next/static/Qxw5s2OuvMtNRMRsDaAro/: _buildManifest.js
docs/_next/static/TTQud1ZMkerJf9z4R_TSA/: _buildManifest.js
docs/_next/static/chunks/: 1588b51bba81eea6.js  2ccdefaf0a9093d1.js  7bc1885438e412f1.js  9494d0fb9c281e12.js  c8558aa8345ed8cf.css  d737720114ce13e4.js  e02edc785a62a455.js  f1241e88b3574d0c.js  f5ea2a7c77614353.js  turbopack-009e158498fb63d9.js  turbopack-3ab047a4adfcb721.js  turbopack-cfcaffdcb74b5ae6.js  turbopack-e7ff4e20cb633d38.js  turbopack-ee51845dc66f3277.js
